# Resume_AI

./: .gitignore  CLAUDE.md  Readme.md  SPEC.md  job_requirement.json  main.py  pyproject.toml  resume_ai.example.db
app/: database.py  document_parser.py  llm.py  models.py  parser_service.py  regex_parser.py  routes.py  worker.py
app/scoring/: __init__.py  education.py  embeddings.py  engineering.py  experience.py  hard_filter.py  pipeline.py  skills.py
app/templates/: base.html  candidate.html  index.html  match.html  upload.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: CandidateTable.vue  DetailField.vue  EngineeringMatrix.vue  FilterPanel.vue  MarkdownContent.vue  ScoreBadge.vue  ScoreCard.vue  SectionCard.vue  TierBadge.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/stores/: bookmarks.js  filters.js
frontend/src/views/: DetailView.vue  ListView.vue
scripts/: batch_import.py  batch_score_all.py  create_example_db.py  dedup_candidates.py  import_to_db.py  repair_candidates.py  test_lmstudio.py
tests/: test_e2e_scoring.py  test_scoring.py
