[project]
name = "resume-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.9",
    "marker-pdf>=1.6",
    "pillow<11.0.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]
